fix one pixel gap in top menu

--- a/source/css/components/_navigation.sass
+++ b/source/css/components/_navigation.sass
@@ -74,7 +74,7 @@ svg.bell
 
 @include mq(small)
   .nav__side
-    top: 159px
+    top: 158px
 
 @include mq(medium)
   .nav__side
